# animal_api_again

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  run_tailwind.py
.github/workflows/: rust.yml
backend_api/: Cargo.toml
backend_api/src/: main.rs
backend_api/src/animal/: mod.rs  object.rs  repository.rs  response.rs
backend_api/src/animal/_sql/: add_animal.sql  fetch_all_animals.sql  fetch_animal_by_id.sql  update_animals.sql
backend_api/src/common/: mod.rs  results.rs
backend_api/src/common/cache_local/: mod.rs
backend_api/src/common/config/: mod.rs
backend_api/src/common/context/: mod.rs
backend_api/src/common/db/: mod.rs
backend_api/src/common/db/_sql/: init.sql
backend_api/src/common/error/: mod.rs
backend_api/src/common/locale/: mod.rs
backend_api/src/common/object/: mod.rs
backend_api/src/common/validation/: mod.rs
desktop/: Cargo.toml
desktop/src/: main.rs
mobile/: Cargo.toml
mobile/src/: main.rs
shared/: Cargo.toml
shared/src/validation/: mod.rs  string_rules.rs  validate_locale.rs
shared/src/validation/models/: animal.rs  mod.rs
shared/src/validation/types/: description.rs  mod.rs  species.rs
ui/: Cargo.toml
ui/assets/styling/: main.css
ui/assets/tailwind/: main.css  tailwindcss
ui/src/: animal.rs  lib.rs
ui/src/api/: animal.rs  mod.rs
ui/src/common/locale/: mod.rs
ui/src/ext/: mod.rs
ui/src/model/: animal.rs
web/: Cargo.toml
web/src/: main.rs
