[workspace]
resolver = "2"
members = [
    "ui",
    "web",
    "desktop",
    "mobile",
    "backend_api",
]

[workspace.dependencies]
dioxus = { version = "0.7.0-rc.0", features = ["router"] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
error-stack = "0.5.0"
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = { version = "0.12.23", features = ["json"] }

# workspace
ui = { path = "ui" }