[package]
name = "backend_api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
error-stack = { workspace = true }
shared = { workspace = true }

poem = { version = "3.1.12" }
poem-openapi = { version = "5.1.16", features = ["swagger-ui"] }
figment = { version = "0.10.19", features = ["toml"] }
rusqlite = { version = "0.37.0", features = ["chrono"] }
unicode-segmentation = "1.12.0"