[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
shared = { workspace = true }
thiserror = { workspace = true }
error-stack = { workspace = true }

dioxus-primitives = { git = "https://github.com/DioxusLabs/components" }